--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "server": "json-server -d 750 -w -p 3333 ./server.js"
   },
   "dependencies": {
+    "@types/react-virtualized": "^9.21.21",
     "next": "12.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^17",
+    "react-dom": "^17",
+    "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
+    "@types/react": "^17",
     "@types/react-dom": "18.0.5",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
